-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 14
-
Component/s: hotspot
-
b21
-
ppc, s390x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234577 | 11.0.6 | Martin Doerr | P4 | Resolved | Fixed | b05 |
| JDK-8265415 | openjdk8u302 | Martin Doerr | P4 | Resolved | Fixed | b01 |
The JVM crashes sporadically in pd_get_top_frame_for_profiling. This was observed several times while running jfr or appcds/TestWithProfiler tests.
The verification if a method read from an interpreter frame is really valid is not reliable enough. We should check if pointers really point into the expected data structures before attempting to read from them.
The verification if a method read from an interpreter frame is really valid is not reliable enough. We should check if pointers really point into the expected data structures before attempting to read from them.
- backported by
-
JDK-8234577 [PPC64, s390]: Make async profiling more reliable
-
- Resolved
-
-
JDK-8265415 [PPC64, s390]: Make async profiling more reliable
-
- Resolved
-
- relates to
-
JDK-8221539 [metaspace] Improve MetaspaceObj::is_metaspace_obj() and friends
-
- Resolved
-