8231949: [PPC64, s390]: Make async profiling more reliable

Better checks if method from interpreter frame is valid.

Reviewed-by: rrich, ghaug, goetz